clusters/talos-cluster/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: prowlarr
  labels:
    app: prowlarr-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: prowlarr-deployment
  template:
    metadata:
      name: prowlarr-deployment
      labels:
        app: prowlarr-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest@sha256:b0ee2135e6ba52ad3f102aae9663707cd1c9531485117067a380d3b2b6dd991d
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: ["ALL"]
              add: ["NET_ADMIN"]
          resources:
            limits:
              devic.es/tun: "1"
          volumeMounts:
            - name: gluetun-config
              mountPath: /gluetun
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest@sha256:4fd7a166c8f46dd3370a871c250ee577d6c2ae97a0dbe0e3614b5ef736205620
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
              name: prowlarr
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
            - name: prowlarr-media
              mountPath: /media
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "3Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8191
      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-data
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-data
        - name: prowlarr-media
          persistentVolumeClaim:
            claimName: prowlarr-media
