clusters/talos-cluster/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: prowlarr
spec:
  selector:
    app: prowlarr-deployment
  ports:
    - name: shadowsocks-tcp
      protocol: TCP
      port: 8388
    - name: shadowsocks-udp
      protocol: UDP
      port: 8388
    - name: prowlarr
      protocol: TCP
      port: 9696
