clusters/talos-cluster/prowlarr/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: prowlarr
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "prowlarr.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr-service
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr-route
  namespace: prowlarr
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "flare.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr-service
          port: 8191
